ingress/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: argocd
  namespace: istio-system
spec:
  hosts:
    - argocd.reon.buzz
  gateways:
    - public-gateway
  http:
    - route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
